evidence_library/EC2/us-east-2/security_groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0281bd23cf2b7ec63",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b68e9dea8460f1e4",
            "SecurityGroupArn": "arn:aws:ec2:us-east-2:798094440826:security-group/sg-0281bd23cf2b7ec63",
            "OwnerId": "798094440826",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "798094440826",
                            "GroupId": "sg-0281bd23cf2b7ec63"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
